# AMZ_iHERB_PO_Aggregator

./: .gitignore  PO_Aggregator_Guidebook.docx  README.md  package-lock.json  package.json  vite.config.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
