[package]
name = "tao-of-tea-po"
version = "0.1.0"
description = "The Tao of Tea AMZ/iHerb PO Aggregator"
authors = ["Aryan Bhardwaj"]
edition = "2021"

[lib]
name = "tao_of_tea_po_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.26"
rust_xlsxwriter = "0.80"
csv = "1.3"
indexmap = "2"
dirs = "5"
